# airbnb-scraper

./: README.md  database.py  how_i_created.md  pyproject.toml  scrape_airbnb.py  slack_bot.py
airbnb-scrape/: Cargo.toml
airbnb-scrape/airbnb-scraper/: Cargo.toml
airbnb-scrape/airbnb-scraper/src/: main.rs
airbnb-scrape/database/: Cargo.toml
airbnb-scrape/database/src/: lib.rs  models.rs  schema.rs
airbnb-scrape/src/: main.rs
src/: airbnb_spider.py  database.py  scrape_airbnb.py  scrape_page.py  slack_bot.py  utils.py
