[tool.poetry]
name = "airbnb-scrape"
version = "0.1.0"
description = "Airbnb Scraper and slack bot"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = "0.5.5"
black = "19.3b0"
beautifulsoup4 = "4.8.0"
selenium = "3.141.0"
pylint = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
